Fix adaptive styles for main page(and remove whitespaces)

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -1,4 +1,4 @@
 body
-  background-color: #FFF7DB
+  background-color: #FDF6E2
 .hidden
   visibility: hidden
