--- a/app/assets/stylesheets/modules/main-logo.sass
+++ b/app/assets/stylesheets/modules/main-logo.sass
@@ -14,11 +14,16 @@
   .subscription-form
     height: 50px
     .subscribe-link
-      margin-top: 2px
+      margin-top: 10px
       display: inline-block
     input.subscription-field
-      margin-left: 23%
+      margin-top: -30px
+      margin-left: 24%
       margin-bottom: 0
-      width: 54%
+      width: 53%
       background: transparent
       box-shadow: none
+      border-left: none
+      border-right: none
+      border-top: none
+      text-align: center
