--- a/app/assets/stylesheets/modules/main-tip.sass
+++ b/app/assets/stylesheets/modules/main-tip.sass
@@ -11,10 +11,10 @@
     visibility: hidden
   @include breakpoint(medium up)
     margin: 12% 20%
-    font-size: 1.8em
+    font-size: 1.35em
   @include breakpoint(xlarge up)
-    margin: 35% 25%
-    font-size: 2em
+    margin: 22% 25%
+    font-size: 1.8em
   &.tip-1
     -ms-transform: rotate(15deg)
     -webkit-transform: rotate(15deg)
